[package]
name = "pcg32"
version = "0.1.2"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "CC0-1.0"
edition = "2024"
rust-version = "1.85"
description = "No-frills PCG32 random number generator implementation"
repository = "https://github.com/LiosK/rust-pcg32"
documentation = "https://docs.rs/pcg32"
keywords = ["random", "rng", "pcg"]
categories = ["algorithms", "no-std"]

[dependencies]

[dev-dependencies]
rand_pcg = { version = "0.9.0", default-features = false }
